--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -9,4 +9,4 @@ COPY world/world.sql /tmp/
 # This is specific to MySQL.
 COPY world/world.sql /docker-entrypoint-initdb.d
 # Set the root password
-ENV MYSQL_ROOT_PASSWORD test123
+ENV MYSQL_ROOT_PASSWORD example
