--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,24 @@ jobs:
       install: skip
       jdk: oraclejdk11
       script:
-        - mvn package -DskipTests=true -Dmaven.javadoc.skip=true
-        - docker-compose up --abort-on-container-exit
+      - echo "Deploying to GitHub Releases"
+      # Package (build) the JAR
+      - mvn package -DskipTests=true -Dmaven.javadoc.skip=true
+      before_deploy:
+        # Set up git user name and tag this commit
+        - git config --local user.name "Albert Hadacek"
+        - git config --local user.email "40446686@live.napier.ac.uk"
+        # Create temporary tag from date and Git log.
+        - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y-%m-%d')-$(git log --format=%h -1)}
+        # Set tag
+        - git tag $TRAVIS_TAG
+      deploy:
+        provider: releases
+        # This is the token we set before
+        api_key: $GITHUB_OAUTH_TOKEN
+        # Copy built JAR file to release.  JAR built in $TRAVIS_BUILD_DIR/target
+        file: $TRAVIS_BUILD_DIR/target/seMethods.jar
+        skip_cleanup: true
 
 stages:
   - unit tests
